@@ -142,6 +142,7 @@ t/11-twinprimes.t
 t/11-sumprimes.t
 t/11-clusters.t
 t/11-almostprimes.t
+t/11-omegaprimes.t
 t/12-nextprime.t
 t/13-primecount.t
 t/14-nthprime.t
