@@ -23,4 +23,8 @@ extern UV almost_prime_count_lower(uint32_t k, UV n);
 extern UV range_construct_almost_prime(UV** list, uint32_t k, UV lo, UV hi);
 extern UV range_almost_prime_sieve(UV** list, uint32_t k, UV lo, UV hi);
 
+/* Using prime_omega rather than prime_bigomega */
+extern UV range_omega_prime_sieve(UV** ret, uint32_t k, UV lo, UV hi);
+extern UV omega_prime_count(uint32_t k, UV n);
+
 #endif
